--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -60,10 +60,9 @@ jobs:
       env:
         KIND_NODE_TAG: ${{ matrix.version }}
         IMAGE_PULL_POLICY: IfNotPresent
-        CONFORMANCE_REPORT_PATH: /home/runner/work/gateway/gateway/non-experimental.yaml
+        CONFORMANCE_REPORT_PATH: non-experimental.yaml
       run: |
         make conformance
-        cat /home/runner/work/gateway/gateway/non-experimental.yaml
 
   conformance-experimental-test:
     runs-on: ubuntu-latest
@@ -92,10 +91,9 @@ jobs:
       env:
         KIND_NODE_TAG: ${{ matrix.version }}
         IMAGE_PULL_POLICY: IfNotPresent
-        CONFORMANCE_REPORT_PATH: /home/runner/work/gateway/gateway/experimental.yaml
+        CONFORMANCE_REPORT_PATH: experimental.yaml
       run: |
         make experimental-conformance
-        cat /home/runner/work/gateway/gateway/experimental.yaml
 
   e2e-test:
     runs-on: ubuntu-latest
